# kibot

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  fix_makefiles.py  kibot.spec  mkinstalldirs  py-compile  setup.py
doc/: Makefile.in  defaults.conf  help.css  kibot-control.1  kibot.1  module-tutorial.html  modulehelp.css  perms  simple.conf
doc/Magic3PiBall/: MagicTree.txt  README.shellfilters  formats.txt
kibot/: BaseModule.py  Bot.py  CommandHandler.py  Flood.py  Makefile.in  ModuleManager.py  OptionParser.py  Options.prepy  Options.py  Options.py.in  PermObjects.py  Settings.py  Stasher.py  cmd_control.py  cmd_kibot.py  daemon.py  ircDB.py  irclib.py  logger.py  m_irclib.py  permDB.py  scripts.py
kibot/modules/: auth.py  base.py  bugzilla.py  google.py  irc.py  log.py  magic.py  messaging.py  rand.py  whereis.py
modules/: Makefile.in  acro.py  auth.py  base.py  debug.py  irc.py  log.py  slashdot.py  test.py  units.py
pymod/: AccessTree.py  GibberSpeak.py  Makefile.in  SOAP.py  TextFilter.py  gibberbase.py  magicdata.py  pygoogle.py  shellfilters.py
tools/: Makefile.in  ircdb-convert.py  ircdb-dump.py  kibot.init  make_module_docs.py  stash_convert.py
